# corr

./: Cargo.toml
corr-lib/: Cargo.toml
corr-lib/src/: lib.rs
corr-lib/src/journey/step/system/: mod.rs  parser.rs
corrs_async/: Cargo.toml
corrs_async/src/: hub.rs  lib.rs  main.rs  proto.rs  server.rs
lib/corr_core/: Cargo.toml
lib/corr_core/src/: lib.rs
lib/corr_core/src/runtime/: mod.rs
lib/corr_journeys/src/: lib.rs
lib/corr_journeys_builder/src/parser/: mod.rs
lib/corr_postgres/src/: lib.rs
lib/corr_rest/src/: lib.rs
lib/corr_server_lib/src/processor/: mod.rs
lib/corr_server_lib/src/sync/: mod.rs
lib/corr_server_lib/src/web/: mod.rs
lib/corr_server_lib/src/web/ws/: mod.rs
lib/corr_templates/src/json/: mod.rs
lib/corr_templates/src/json/extractable/: mod.rs
lib/corr_templates/src/text/: mod.rs
