[package]
name = "corrs_async"
version = "0.0.1"
authors = ["Atmaram Naik <naik.atmaram@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
log = "0.4.11"
env_logger = "0.7.1"
chrono = { version = "0.4.13", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
corr_core={path="../lib/corr_core"}
corr_templates={path="../lib/corr_templates"}
corr_journeys={path="../lib/corr_journeys"}
corr_journeys_builder={path="../lib/corr_journeys_builder"}
corr_websocket={path="../lib/corr_websocket"}
corr_rest={path="../lib/corr_rest"}
clap = "2.33.0"
app_dirs2 = "2"
async-trait = "0.1.36"
