[package]
name = "corr_core"
version = "0.1.0"
authors = ["ATM <naik.atmaram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0.48"
async-trait = "0.1.36"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
async-recursion = "0.3.1"